--- a/css/anuncio.css
+++ b/css/anuncio.css
@@ -1,3 +1,4 @@
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
     background-color: #f5f5fe;
 }
@@ -11,6 +12,7 @@ body {
     margin-left: 20px;
     padding-left: 5px;
     color: white;
+    width: 100px;
 }
 
 .nav-item a:hover {
